--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,35 @@
 name: diozz
 description: The diozz library helps you to deal with APIs easily and speed up the process of writing code.
-version: 0.0.1+1-beta
-author: Mohamed Abu.elezz <m.abuelezz97@gmail.com>
+version: 0.0.1+2-beta
 homepage: https://www.linkedin.com/in/mohamed-abuelezz/
 repository: https://github.com/Mohamed-Abuelezz/Diozz.git
 
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^4.0.4
+  flutter_localizations:
+    sdk: flutter
+  dio: ^4.0.6
   #http_parser: ^4.0.0
-  connectivity: ^3.0.6
+  simple_connection_checker: ^0.2.1
   palestine_console: ^0.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # To add assets to your package, add an assets section, like this:
   # assets:
